--- a/lp02.md
+++ b/lp02.md
@@ -4,3 +4,6 @@ Desde que en *Matrix* hubo un bug, la escuela se encuentra asediada por un
 viros contra el que **Larry** y sus amigos deberán luchar.
 
 En esta aventura **Larry** se enterará de nuevos detalles sobre su destino 
+ 
+Como el malvado hacker le metió un troyano, en su propio código podia
+meterse en su codigo
